# Simu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  codecov.yml  massifReport
.github/workflows/: build.yml  build_macos.yml  build_ubuntu.yml  build_windows.yml  cmake.yml  codecov.yml  deploy-docs.yml
cmake/: macros.cmake
demos/: BoxStacks.cpp  CMakeLists.txt  Demos.cpp  Demos.hpp  Friction.cpp  ImGuiTest.cpp  ImguiTest.cpp  Motorcycle.cpp  NewtonPendulum.cpp  Pyramid.cpp  Tower.cpp  Tumbler.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  ReadMe.md
docs/source/: conf.py.in  index.rst  reference.rst
include/Simu/: CMakeLists.txt  app.hpp  config.hpp  graphics.hpp  math.hpp  physics.hpp
include/Simu/app/: Application.hpp  Camera.hpp  Drawable.hpp  Entity.hpp  Event.hpp  MouseConstraint.hpp  Renderer.hpp  Renderer.inl.hpp  Scene.hpp  Tool.hpp  VisiblePhysics.hpp
include/Simu/math/: BarycentricCoordinates.hpp  BoundingBox.hpp  Circle.hpp  Edges.hpp  GeometricProperties.hpp  Geometry.hpp  Geometry.inl.hpp  Gjk.hpp  Gjk.inl.hpp  Interval.hpp  Matrix.hpp  Matrix.inl.hpp  Polygon.hpp  Polygon.inl.hpp  Random.hpp  Sat.hpp  Shape.hpp  ShapeCollision.hpp  math.hpp
include/Simu/physics/: Bodies.hpp  Bodies.inl.hpp  Body.hpp  Body.inl.hpp  BodyTree.hpp  BoundingBox.hpp  Collider.hpp  CombinableProperty.hpp  Constraint.hpp  Constraint.inl.hpp  ConstraintDerivation.md  ConstraintFunction.hpp  ConstraintInterfaces.hpp  ConstraintSoftness.hpp  ConstraintSolver.hpp  ContactManifold.hpp  DistanceConstraint.hpp  ForceField.hpp  Island.hpp  Material.hpp  Motors.hpp  PhysicsBody.hpp  PhysicsObject.hpp  PhysicsWorld.hpp  PointerArray.hpp  Profiler.hpp  RTree.hpp  RTree.inl.hpp  Range.hpp  Sleepable.hpp  SuspensionConstraint.hpp  Transform.hpp  View.hpp  World.hpp  World.inl.hpp  physics.hpp
include/Simu/utility/: Algo.hpp  Callable.hpp  FloatingPointExceptions.hpp  FreeListAllocator.hpp  Memory.hpp  PointerArray.hpp  PolymorphicList.hpp  View.hpp  View.inl.hpp
src/Simu/: CMakeLists.txt
src/Simu/app/: Application.cpp  Camera.cpp  Renderer.cpp  Scene.cpp  Tool.cpp
src/Simu/graphics/: graphics.cpp
src/Simu/math/: BarycentricCoordinates.cpp  BoundingBox.cpp  GeometricProperties.cpp  Geometry.cpp  Gjk.cpp  Polygon.cpp  Random.cpp  ShapeCollision.cpp  math.cpp
src/Simu/physics/: Bodies.cpp  Body.cpp  BoundingBox.cpp  Constraint.cpp  PhysicsBody.cpp  PhysicsWorld.cpp  World.cpp  physics.cpp
test/: Assertion.cpp  BarycentricCoordinates.cpp  BoundingBox.cpp  CMakeLists.txt  ContactManifold.cpp  Geometry.cpp  Gjk.cpp  Interval.cpp  Island.cpp  Matrix.cpp  Physics.cpp  Polygon.cpp  RTree.cpp  Shape.cpp  dummy.cpp
